src/examples/invalid/dynamic/unexistant-column.ra
func main(): void {
  dataframe = read_csv("song_data_clean.csv");
  avg = average(dataframe, "why");
  print(avg);
}

